mcts .. getting it to work